crates/outbox-publisher/tests/ui/04_multiple_aggregate_id_fields.stderr
error: multiple fields marked `#[event(aggregate_id)]`; only one is allowed
  --> tests/ui/04_multiple_aggregate_id_fields.rs:10:9
   |
10 |     pub another_id: Uuid,
   |         ^^^^^^^^^^
